# FancyDesignsPy

./: .gitignore  002.bat  3dbifurcation.py  ComplexNumbers3D.py  SpiralWeb.py  bifurcationdiagram.py  flower.py  flower2.py  flower3.py  pyproject.toml  spirograph.py
