[tool.poetry]
name = "fancydesignspy"
version = "0.1.0"
description = "fancy designs using python"
authors = ["Shan Konduru <shankonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
turtle = "^0.0.2"

[tool.poetry.group.dev.dependencies]
turtle = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
